--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@laylazi/bootstrap-rtl": "^4.5.1-1",
-    "bootstrap": "^4.5.1",
-    "css-loader": "^5.2.7",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@laylazi/bootstrap-rtl": "^4.5.3-1",
+    "bootstrap": "^4.5.3",
+    "css-loader": "^4.2.0",
+    "expose-loader": "^4.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "jquery": "^3.5.3",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^2.7.2",
     "popper.js": "^1.16.1",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
