--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jquery": "^3.5.1",
+    "jquery-ui-touch-punch": "^0.2.3",
     "mini-css-extract-plugin": "^2.7.2",
     "popper.js": "^1.16.1",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-jquery-ui": "^2.0.1"
   }
 }
